Add unit/location/createdBy fields to items, save users to MongoDB on login
